@@ -129,6 +129,8 @@ Silva changes
 
     Bugs fixed:
 
+      - Fixed AutoTOC depth feature (issue 1693)
+
       - Fixed behavior in Internet Explorer where it's impossible to change
         the "link to" field in the image toolbox in kupu, by removing the
         onkeypress event.
